In CSS, apply position:relative to .hero-section-hompage, to prevent horizontal page shift when re-sizing on chrome mobile.

--- a/css/style.sass
+++ b/css/style.sass
@@ -457,6 +457,7 @@ footer
 
 .hero-section-homepage
   background-color: $light-purple
+  position: relative
   img
     position: absolute
     left: 105px
